--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 tensorflow==2.15.0
 numpy==1.24.3
 opencv-python==4.8.1.78
+opencv-contrib-python==4.8.1.78
 Pillow==10.1.0
 matplotlib==3.8.2
 seaborn==0.13.0
