--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,23 @@ outputs/
 checkpoints/
 plots/
 results/
+
+# MLOps
+models/registry/
+mlflow/
+mlruns/
+.mlflow/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.mypy_cache/
+.hypothesis/
+
+# Monitoring
+prometheus-data/
+grafana-data/
+mlflow-data/
+
