--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,15 @@ pyyaml==6.0.1
 jsonschema==4.20.0
 scipy==1.11.4
 requests==2.31.0
+
+# MLOps Dependencies
+mlflow==2.9.2
+prometheus-client==0.19.0
+
+# Testing
+pytest==7.4.3
+pytest-cov==4.1.0
+flake8==6.1.0
+black==23.12.1
+mypy==1.7.1
+
